--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body
     margin: 0;
     padding: 0;
 }
-#cabecera
+#cabezara
 {
     background: #33A;
     box-shadow: 0px 5px 20x 0px rgba(0, 0, 0 ,alpha);
@@ -17,7 +17,7 @@ body
     font-weight:bold;
 
 }
-#cabezer #tagline
+#cabezara #tagline
 {
 padding: 1em 0 0 0;
 font-weight: normal;
