--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body 
 {
-    color:#333;
+    background-color: #1e1f24;
+    color: white;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -16,6 +17,11 @@ body
     padding:0.5em;
     font-weight:bold;
 
+}
+#cabezara #logo
+{
+    width: 29 px;
+    vertical-align: middle;
 }
 #cabezara #tagline
 {
